<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wraping_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopActivity">

    <htoyama.timetable.presentation.views.StateFrameLayout
        android:id="@+id/state_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        >

        <htoyama.timetable.presentation.views.MySwipeRefreshLayout
            android:id="@+id/top_swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <htoyama.timetable.presentation.views.TimetableCardListView
                android:id="@+id/top_timetable_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_medium"
                android:clipToPadding="false"
            />

        </htoyama.timetable.presentation.views.MySwipeRefreshLayout>

    </htoyama.timetable.presentation.views.StateFrameLayout>

    <include layout="@layout/include_toolbar"/>

    <ImageView
        android:id="@+id/fab_add_timetable"
        android:layout_width="@dimen/fab_medium_width"
        android:layout_height="@dimen/fab_medium_height"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@drawable/adding_timetable_icon"
        android:elevation="@dimen/fab_elevation" />

</FrameLayout>
